examples/anthos-service-mesh/starwars-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: galaxy
  labels:
    istio.io/rev: asm-managed-rapid
